Tue Sep 20 08:32:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/tests/IOR_MCast/ior_mcast_client_i.cpp:

          Added some traces to be able to see testresult.

        * orbsvcs/tests/IOR_MCast/run_test_ipv6.pl:

          Added IPV6 specific testscript.

Tue Sep 20 08:26:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/BiDirectional/run_test_ipv6.pl:

          Added IPV6 specific testscript.

Tue Sep 20 08:23:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tao/IIOP_Acceptor.cpp:
        * tao/IIOP_Endpoint.cpp:
        * tao/Invocation_Endpoint_Selectors.cpp:

          Improvements for IPv6 support.

Mon Sep 19 20:46:14 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/PortableGroup/PG_ObjectGroupManager.cpp:

          Removed run-time assertions.  They generally shouldn't be used
          in infrastructure code. Favor returning and checking error
          conditions and/or throwing exceptions instead.

Mon Sep 19 16:11:12 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_home.cpp:

          Added missing check for null before enqueueing a primary
          key valuetype into the queue to be checked after parsing.
          If there is no primary key specified, we don't want to
          enqueue a 0, since the queue will then be non-empty but
          have no usable value to dequeue.

Mon Sep 19 14:50:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:

        Eliminate unused exception macros.

Mon Sep 19 11:45:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:

        Corrected the correction due to non-standard MSVC name,
        Thanks to Martin J.N. Corino for the correct interpretation.

Mon Sep 19 10:15:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
